--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,10 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/flower.svg
+    - assets/images/flower.svg
+    - assets/images/dailyfood.jpg
+    - assets/images/picks.jpg
+    - assets/images/menstruation.jpg
 
   fonts:
      - family: YesevaOne
