Prepare repo for public: update README, .gitignore, remove debug info

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,87 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Add to the bottom of your existing .gitignore:
+
+# Environment Variables & Secrets
+.env
+.env.local
+**/secrets/
+**/credentials/
+
+*.env
+firebase_options.dart
+google-services.json
+GoogleService-Info.plist
+
+# API Keys & Secrets
+lib/config/secrets.dart
+lib/config/api_keys.dart
+lib/firebase_options.dart
+
+# Personal notes
+notes.txt
+todo.txt
+personal-notes/
+screenshots/
+
+# iOS
+ios/Runner/GoogleService-Info.plist
+ios/firebase_app_id_file.json
+
+# Android
+android/app/google-services.json
+
+
+# Firebase - IMPORTANT!
+**/android/app/google-services.json
+**/ios/Runner/GoogleService-Info.plist
+**/lib/firebase_options.dart
+
+# Secrets
+secrets.dart
+
+# Android related
+**/android/**/gradle-wrapper.jar
+**/android/.gradle
+**/android/captures/
+**/android/gradlew
+**/android/gradlew.bat
+**/android/local.properties
+**/android/**/GeneratedPluginRegistrant.java
+
+# iOS/XCode related
+**/ios/**/*.mode1v3
+**/ios/**/*.mode2v3
+**/ios/**/*.moved-aside
+**/ios/**/*.pbxuser
+**/ios/**/*.perspectivev3
+**/ios/**/*sync/
+**/ios/**/.sconsign.dblite
+**/ios/**/.tags*
+**/ios/**/.vagrant/
+**/ios/**/DerivedData/
+**/ios/**/Icon?
+**/ios/**/Pods/
+**/ios/**/.symlinks/
+**/ios/**/profile
+**/ios/**/xcuserdata
+**/ios/.generated/
+**/ios/Flutter/App.framework
+**/ios/Flutter/Flutter.framework
+**/ios/Flutter/Flutter.podspec
+**/ios/Flutter/Generated.xcconfig
+**/ios/Flutter/ephemeral/
+**/ios/Flutter/app.flx
+**/ios/Flutter/app.zip
+**/ios/Flutter/flutter_assets/
+**/ios/Flutter/flutter_export_environment.sh
+**/ios/ServiceDefinitions.json
+**/ios/Runner/GeneratedPluginRegistrant.*
+
+# Exceptions to above rules.
+!**/ios/**/default.mode1v3
+!**/ios/**/default.mode2v3
+!**/ios/**/default.pbxuser
+!**/ios/**/default.perspectivev3
