--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ flutter:
     - assets/images/trackClock.png
     - assets/images/vaccination.png
     - assets/images/eggs.jpg
+    - assets/images/nutrition_guide.jpg
 
 
   fonts:
