--- a/.gitignore
+++ b/.gitignore
@@ -132,4 +132,4 @@ secrets.dart
 !**/ios/**/default.mode1v3
 !**/ios/**/default.mode2v3
 !**/ios/**/default.pbxuser
-!**/ios/**/default.perspectivev3
+!**/ios/**/default.perspectivev3lib/firebase_options.dart
