--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ flutter:
     - assets/images/vaccination.png
     - assets/images/eggs.jpg
     - assets/images/nutrition.png
+    - assets/images/workoutYoga.jpg
+    - assets/images/healthyChoices.jpg
 
 
   fonts:
